@@ -39,3 +39,8 @@ Fix Win32 when perl is installed in C:\Program Files
 Make sure PDL builds
 
 Fix find_perl on Amiga trg@privat.utfors.se
+
+Support full recursive scans of Makefile.PL's.  Not just a shallow
+one-level peek.
+
+Add a way to explicitly skip certain directories from processing.
